--- a/index.html
+++ b/index.html
@@ -123,31 +123,44 @@
 
   <!-- Account -->
 <section id="accountPage" class="hidden">
-  <div class="bg-gray-800 p-6 rounded space-y-4">
-    <div id="accountInfo"></div>
+  <div class="bg-gray-800 p-6 rounded-xl shadow-lg space-y-4">
     
+    <div id="accountInfo" class="space-y-1"></div>
+
     <div id="editProfileForm" class="hidden border-t border-gray-700 pt-4 mt-4 space-y-3">
-      <div class="grid grid-cols-2 gap-2">
-        <input id="editFirst" type="text" placeholder="First Name" class="bg-gray-900 p-2 rounded border border-gray-700">
-        <input id="editLast" type="text" placeholder="Last Name" class="bg-gray-900 p-2 rounded border border-gray-700">
+      <h4 class="text-sm font-semibold text-gray-400 uppercase tracking-wider">Edit Profile</h4>
+      <div class="grid grid-cols-2 gap-3">
+        <div>
+          <label class="text-xs text-gray-500">First Name</label>
+          <input id="editFirst" type="text" class="w-full bg-gray-900 p-2 rounded border border-gray-700 focus:border-blue-500 outline-none">
+        </div>
+        <div>
+          <label class="text-xs text-gray-500">Last Name</label>
+          <input id="editLast" type="text" class="w-full bg-gray-900 p-2 rounded border border-gray-700 focus:border-blue-500 outline-none">
+        </div>
       </div>
-      <select id="editGrade" class="w-full bg-gray-900 p-2 rounded border border-gray-700">
-        <option value="">Select grade</option>
-        <option>Kindergarten</option>
-        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
-        <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
-        <option>11</option><option>12</option>
-      </select>
-      <div class="flex gap-2">
-        <button id="saveProfileBtn" class="bg-green-600 px-4 py-2 rounded text-sm">Save Changes</button>
-        <button id="cancelEditBtn" class="bg-gray-600 px-4 py-2 rounded text-sm">Cancel</button>
+      <div>
+        <label class="text-xs text-gray-500">Grade</label>
+        <select id="editGrade" class="w-full bg-gray-900 p-2 rounded border border-gray-700 focus:border-blue-500 outline-none">
+          <option value="">Select grade</option>
+          <option>Kindergarten</option>
+          <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+          <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
+          <option>11</option><option>12</option>
+        </select>
+      </div>
+      <div class="flex gap-2 pt-2">
+        <button id="saveProfileBtn" class="bg-green-600 hover:bg-green-700 px-4 py-2 rounded text-sm font-medium transition">Save Changes</button>
+        <button id="cancelEditBtn" class="bg-gray-700 hover:bg-gray-600 px-4 py-2 rounded text-sm font-medium transition">Cancel</button>
       </div>
     </div>
 
-    <button id="showEditBtn" class="text-sm text-blue-400 underline">Edit Profile</button>
+    <button id="showEditBtn" class="text-sm text-blue-400 hover:text-blue-300 underline transition">Edit Profile</button>
     
-    <div class="text-sm text-gray-400 pt-2 border-t border-gray-700">Total Minutes on Site: <span id="totalMinutes">0</span></div>
-    <div id="referralArea" class="mt-3 text-sm"></div>
+    <div class="pt-4 border-t border-gray-700">
+      <div class="text-sm text-gray-400">Total Minutes on Site: <span id="totalMinutes" class="text-white">0</span></div>
+      <div id="referralArea" class="mt-3"></div>
+    </div>
   </div>
 </section>
 </main>
