--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div id="loginError" class="text-red-400 text-sm mt-2"></div>
     <input id="email" type="email" placeholder="Email" />
     <input id="password" type="password" placeholder="Password" />
-    <input id="referralCodeInput" type="text" placeholder="Referral code (optional)" />
+    <input id="referralCodeInput" type="text" placeholder="Referral code (optional)(if u used a refferal link it is not needed)" />
     <div class="flex gap-2">
       <button id="signInBtn" class="bg-blue-600 px-3 py-2 rounded">Sign In</button>
       <button id="signUpBtn" class="bg-green-600 px-3 py-2 rounded">Create Account</button>
